tests/negative/test-fail-return.std
Fatal error: exception Failure("type_err:return type mismatch")
